--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "3.2.0"
   },
   "scripts": {
